fix: Toggle nav elements based on style, infowindow broken on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -89,6 +89,10 @@ svg {
     left: 5%;
     }
 
+    .navClosed {
+      display: none;
+    }
+
     #search {
     position: fixed;
     left: 5%;
